chore(neovim): remove cmp autotrigger

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -77,8 +77,13 @@ set-window-option -g window-status-format '#I:#W'
 set-window-option -g window-status-current-format '#[fg=red]#I:#W#[fg=default]'
 
 # Right: time
-
 set-option -g status-right "%H:%M "
+
+# Pane borders - make them heavier
+set -g pane-border-style fg=brightblack
+set -g pane-active-border-style fg=red,bold
+set -g pane-border-lines heavy
+
 ################################################### 
 # Plugins
 ################################################### 
