--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -39,13 +39,14 @@ bind o run-shell "open #{pane_current_path}"
 # Open new pane/window in current directory
 bind c new-window -c "#{pane_current_path}"
 
-# Split pane/window horizontally in current directory
+# Window management prefix
 unbind %
-bind s split-window -v -c "#{pane_current_path}"
-
-# Split pane/window vertically in current directory
 unbind '"'
-bind v split-window -h -c "#{pane_current_path}"
+unbind w
+bind w switch-client -T window
+bind -T window w choose-window
+bind -T window s split-window -v -c "#{pane_current_path}"
+bind -T window v split-window -h -c "#{pane_current_path}"
 
 # Rezise panes
 bind -r j resize-pane -D 5
