--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -70,12 +70,13 @@ set-option -g status-position bottom
 
 # Left: session name (magenta when prefix active)
 setw -g status-left-length 30
-set-option -g status-left "#{?client_prefix,#[fg=red]  ,#[fg=default]  } #[fg=default]#S"
+set-option -g status-left "#{?client_prefix,#[bg=red]#[fg=black] #S #[bg=default],#[fg=default] #S }"
 
 # Center windows
 set-option -g status-justify centre
-set-window-option -g window-status-format '#I:#W'
-set-window-option -g window-status-current-format '#[fg=red]#I:#W#[fg=default]'
+setw -g window-status-separator " "
+set-window-option -g window-status-format ' #I:#W '
+set-window-option -g window-status-current-format '#[bg=red]#[fg=black] #I:#W #[bg=default]'
 
 # Right: time
 set-option -g status-right "%H:%M "
