change zsh prompt

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -68,7 +68,7 @@ setw -g status-left-length 30
 set-option -g status-left "#{?client_prefix,#[bg=red]#[fg=black] #S #[bg=default],#[fg=default] #S }"
 
 # Center windows
-set-option -g status-justify centre
+set-option -g status-justify absolute-centre
 setw -g window-status-separator " "
 set-window-option -g window-status-format ' #I:#W '
 set-window-option -g window-status-current-format '#[bg=red]#[fg=black] #I:#W #[bg=default]'
