--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -19,6 +19,15 @@ bind C-Space send-prefix
 # Set mouse mode on
 set -g mouse on
 
+# Enable vim mode
+setw -g mode-keys vi
+
+# Vim-style copy mode bindings
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'Y' send -X copy-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+
 # Start windows and panes at 1
 set -g base-index 1
 
