--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -6,8 +6,7 @@ window-padding-x = 0
 window-padding-y = 0
 window-padding-balance = true
 
-background-opacity = 0.7
-background-blur = true
+background-opacity = 0.9
+background-blur = 10
 
 mouse-hide-while-typing = true
-keybind = shift+enter=text:\x1b\r
