--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1,1920x1080@60,0x0,1.1
 
 
 ###################
@@ -32,6 +32,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
+$browser = firefox
 $fileManager = dolphin
 $menu = wofi --show drun
 
@@ -227,7 +228,7 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-bind = $mainMod, B, exec, $firefox
+bind = $mainMod, B, exec, $browser
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
