--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -228,6 +228,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, X, exec, $browser https://x.com/compose/tweet
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
